[project]
name = "fashion-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
